--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     ]
   },
   "scripts": {
+    "consultor": "cd packages/consultor && nuxi dev",
     "dev:consultor": "cd packages/consultor && nuxi dev"
   }
 }
