--- a/packages/consultor/package.json
+++ b/packages/consultor/package.json
@@ -8,7 +8,7 @@
     "nuxt": "nuxt3@latest"
   },
   "scripts": {
-    "dev": "PORT=3000 nuxi dev",
+    "dev": "nuxi dev",
     "start": "node .output/server/index.mjs",
     "test": "echo CONSULTOR - teste"
   }
