Adição de changelog e engines no package.json

--- a/packages/components/monorepo-button/package.json
+++ b/packages/components/monorepo-button/package.json
@@ -1,5 +1,9 @@
 {
   "name": "@monorepo/monorepo-button",
   "version": "0.0.0",
-  "main": "index.js"
+  "main": "index.js",
+  "engines" : {
+    "npm" : ">=8.6.0",
+    "node" : ">=17.8.0"
+  }
 }
