--- a/packages/components/axios-config/package.json
+++ b/packages/components/axios-config/package.json
@@ -4,5 +4,9 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.27.1"
+  },
+  "engines" : {
+    "npm" : ">=8.6.0",
+    "node" : ">=17.8.0"
   }
 }
