--- a/packages/produtor/package.json
+++ b/packages/produtor/package.json
@@ -1,13 +1,7 @@
 {
-  "name": "produtor",
-  "version": "0.1.0",
+  "name": "@monorepo/produtor",
+  "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
     "@monorepo/axios-config": "*",
     "next": "12.1.6",
@@ -16,5 +10,15 @@
   },
   "devDependencies": {
     "eslint-config-next": "12.1.6"
+  },
+  "engines" : {
+    "npm" : ">=8.6.0",
+    "node" : ">=17.8.0"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   }
 }
